--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
        <!--
           Course:  Web Application Development
           Assignment:  Lesson 4 (JavaScript 1)
-          Author:  
-          Date:   
+          Author: Meghan Bertig 
+          Date:  October 18, 2018 
           Filename: index.html
        -->
        <meta charset="utf-8" />
@@ -64,6 +64,23 @@
                       * HINT:  Use the following variable names:  householdInput, miscellaneousInput, transportationInput
                       *
                       *************************************************************************************************-->
+                      
+                      <p><label for="householdInput">
+                            Household (water, electricty, etc.):
+                            <input type="text" id="householdInput" name="household" />
+                          </label>
+                      </p>
+                      <p><label for="transportationInput">
+                            Transportation (gas, car payment, etc.):
+                            <input type="text" id="transportationInput" name="transportation" />
+                          </label>
+                      </p>
+                      <p><label for="miscellaneousInput">
+                            Miscellaneous (emergency, fun, etc.):
+                            <input type="text" id="miscellaneousInput" name="miscellaneous" />
+                          </label>
+                      </p>
+                
 
                 </fieldset>                 
 
